# pacch

./: CHANGELOG.md  Makefile  README.md  cabal.project  hie.yaml  pacch.cabal
.github/workflows/: test.yaml
app/pacchi/: Main.hs
src/: Pacch.hs
src/Control/Monad/ReaderState/: Strict.hs
src/Pacch/: Data.hs  Eval.hs  Native.hs  Parse.hs  Print.hs
test/Pacch/: EvalSpec.hs  ParseSpec.hs  PrintSpec.hs
