cabal-version: 2.2

name: pacch
version: 0.1.0.0
-- synopsis:
-- description:
bug-reports: https://github.com/kakkun61/pacch/issues
license: GPL-3.0-only
license-file: COPYING
author: Kazuki Okamoto (岡本和樹)
maintainer: kazuki.okamoto@kakkun61.com
copyright: 2020 Kazuki Okamoto (岡本和樹)
category:
build-type: Simple
tested-with: GHC == 8.8.3, GHC == 8.8.4, GHC == 8.10.1
extra-source-files: README.md,
                    CHANGELOG.md

common common
  build-depends: base >= 4 && < 5
  ghc-options: -Wall
               -Wcompat
               -Wincomplete-uni-patterns
               -Wincomplete-record-updates
               -Wmonomorphism-restriction
               -Wmissing-exported-signatures
               -Wmissing-export-lists
               -Wmissing-home-modules
               -Widentities
               -Wredundant-constraints
               -Wpartial-fields
               -Wno-name-shadowing
  default-language: Haskell2010

library
  import: common
  hs-source-dirs: src
  build-depends: containers,
                 data-default-class,
                 either-result >= 0.3.1,
                 exceptions,
                 megaparsec,
                 mtl,
                 parser-combinators,
                 text
  exposed-modules: Pacch,
                   Pacch.Data,
                   Pacch.Eval,
                   Pacch.Native,
                   Pacch.Parse,
                   Pacch.Print,
                   Control.Monad.ReaderState.Strict
  ghc-options: -Wmissing-import-lists

executable pacchi
  import: common
  main-is: Main.hs
  hs-source-dirs: app/pacchi
  build-depends: pacch,
                 data-default-class,
                 directory,
                 either-result,
                 filepath,
                 haskeline >= 0.8,
                 megaparsec,
                 mtl,
                 safe-exceptions,
                 text,
                 transformers
  ghc-options: -Wmissing-import-lists

test-suite spec
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs: test
  build-depends: base >= 4 && < 5,
                 pacch,
                 hspec,
                 containers,
                 data-default-class,
                 megaparsec,
                 mtl
  build-tool-depends: hspec-discover:hspec-discover
  ghc-options: -Wall
               -Wcompat
  other-modules: Pacch.EvalSpec,
                 Pacch.ParseSpec,
                 Pacch.PrintSpec
  default-language: Haskell2010
